avformat/mux: Fix assertion failure due to max_interleave_delta and poor input

Fixes Ticket4051

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>